feat: updated project to Java 25